diplom_ewm_15_to_review_yml